Archive2/a1/d2188d049f7e35/output
main.cpp: In function 'int main()':
main.cpp:3:25: error: 'FixedCompilationDatabase' was not declared in this scope
     auto compilations = FixedCompilationDatabase{Twine("."), ArrayRef<std::string>{}};
                         ^
main.cpp:12:1: error: expected ',' or ';' at end of input
 }
 ^
main.cpp:12:1: error: expected '}' at end of input
